--- a/starbuzz.css
+++ b/starbuzz.css
@@ -16,8 +16,6 @@ body {
   font-size:        105%;
   padding:          15px;
   margin:           0px 330px 10px 10px;
-  width: 420px;
-  float: left;
 }
 
 #sidebar {
@@ -25,10 +23,8 @@ body {
   font-size:        105%;
   padding:          15px;
   margin:           0px 10px 10px 10px;
-  position: absolute;
-  top: 128px;
-  right: 0px;
   width: 280px;
+  float: right;
 }
 
 #footer {
