--- a/starbuzz.css
+++ b/starbuzz.css
@@ -12,19 +12,21 @@ body {
 }
 
 #main {
+  display: table-cell
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 330px 10px 10px;
+  vertical-align:top;
 }
 
 #sidebar {
+  display: table-cell
+
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
-  width: 280px;
-  float: right;
+  vertical-align:top;
+
 }
 
 #footer {
@@ -34,7 +36,6 @@ body {
   padding:          15px;
   margin:           10px;
   font-size:        90%;
-  clear: left;
 }
 
 h1 {
@@ -59,11 +60,47 @@ a:visited {
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
 }
+#sidebar{
+  background: #efe5d0 url(images/background.gif) bottom right;
+  font-size: 105%;
+  padding: 15px;
+  margin: 0px 10px 10px 10px;
+  width: 280px;
+  float: right;
+}
+#main{
+  background: #efe5d0 url(images/background.gif)top left;
+  font-size: 105;
+  padding: 15px;
+  margin: 0px 330px 10px 10px;
+}
+#footer{
+  background-color: #675c47;
+  color: #efe5d0;
+  text-align: center;
+  padding: 15px;
+  margin: 10px;
+  font-size: 90%;
+  clear: right;
+}
 #allcontent{
   width: 800px;
   padding-top: 5px;
   padding-bottom: 5px;
   background-color: #675c47;
   margin-left: auto;
-  margin-right: auto;
+  margin-left: auto;
+}
+#drinks{
+  display: table-cell;
+  background-color: #efe5d0;
+  width: 20%;
+  padding: 15px;
+  vertical-align: top;
+}
+#tableContainer{
+  display: table;
+}
+#tableRoW{
+  display: table-row;
 }
