--- a/starbuzz.css
+++ b/starbuzz.css
@@ -5,38 +5,44 @@ body {
   margin:           0px;
 }
 
-#header {
+header {
   background-color: #675c47;
-  margin:           10px;
+  margin: 0px 10px 10px 10px;
   height:           108px;
+
+}
+#head{
+  display: inline-block;
+  background-image: url(images/header.gif);
+  width:400px;
+  height:100px;
+}
+#ead{
+  display: inline-block;
+  background-image: url(images/header.gif);
+  background-position: -400px 0px;
+  width:400px;
+  height:128px;
+  float:right;
 }
 
 #main {
-  display: table-cell
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  vertical-align:top;
+  vertical-align: top;
 }
 
-#sidebar {
-  display: table-cell
-
+aside {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  vertical-align:top;
+  vertical-align: top;
 
 }
 
-#footer {
-  background-color: #675c47;
-  color:            #efe5d0;
-  text-align:       center;
-  padding:          15px;
-  margin:           10px;
-  font-size:        90%;
-}
 
 h1 {
   font-size:        120%;
@@ -60,26 +66,12 @@ a:visited {
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
 }
-#sidebar{
-  background: #efe5d0 url(images/background.gif) bottom right;
-  font-size: 105%;
-  padding: 15px;
-  margin: 0px 10px 10px 10px;
-  width: 280px;
-  float: right;
-}
-#main{
-  background: #efe5d0 url(images/background.gif)top left;
-  font-size: 105;
-  padding: 15px;
-  margin: 0px 330px 10px 10px;
-}
-#footer{
+footer{
   background-color: #675c47;
   color: #efe5d0;
   text-align: center;
   padding: 15px;
-  margin: 10px;
+  margin: 0px 10px 10px 10px;
   font-size: 90%;
   clear: right;
 }
@@ -98,9 +90,33 @@ a:visited {
   padding: 15px;
   vertical-align: top;
 }
+div#tableContainer{
+  display: table;
+}
+div#tableRoW{
+  display: table-row;
+}
 #tableContainer{
   display: table;
+  border-spacing:  10px;
 }
 #tableRoW{
   display: table-row;
+}
+#award{
+  position:absolute;
+  top:30px;
+  left:365px;
+}
+#coupon{
+  position:fixed;
+  top:350px;
+  left:-200px;
+  transition:all 1s linear;
+}
+#coupon:hover{
+  left: 0px;
+}
+#coupon img{
+  border:none;
 }
