--- a/starbuzz.css
+++ b/starbuzz.css
@@ -120,3 +120,49 @@ div#tableRoW{
 #coupon img{
   border:none;
 }
+ul{
+  background-color: #efe5d0;
+  margin: 10px 10px 0px 10px;
+  list-style-type: none;
+  padding: 5px 0px 5px 0px;
+}
+ul li{
+  display: inline;
+  padding: 5px 10px 5px 10px;
+}
+ul li a:link, ul li a:visited{
+  color: #954b4b;
+  border-bottom: none;
+  font-weight: bold;
+}
+ul li.selected{
+  background-color: #c8b99c;
+}
+nav{
+  background-color: #efe5d0;
+  margin: 10px 10px 0px 10px;
+}
+nav ul{
+  margin: 0px;
+  list-style-type: none;
+  padding: 5px 0px 5px 0px;
+}
+nav ul li{
+  display: inline;
+  padding: 5px 10px 5px 10px;
+}
+nav ul li a:link,nav ul li a:visited{
+  color: #954b4b;
+  border-bottom-color: none;
+  font-weight: bold;
+}
+nav ul li.selected{
+  background-color: #c8b99c;
+}
+section#main, section{
+  display: table-cell;
+  background: #efe5d0;
+  font-size: 105%;
+  padding: 15px;
+  vertical-align: top
+}
